# darkcoffys-workbench

./: .gitignore  CHEATSHEET.md  LICENSE  Makefile  QUICKSTART.md  README.md  setup
agents/: artifacts.md  config.yaml  impact-analysis.md  research.md  sdlc.md
agents/templates/: data-quality.yml  design-review.md  domain-ownership.yml  env.template  envrc  modeling-conventions.md  profiles.yml  pyproject.toml  sqlfluff.cfg
agents/templates/adrs/: 000-template.md
agents/templates/diagrams/: data-flow.mmd  data-lineage.mmd  erd.mmd  sdlc-flow.mmd
agents/templates/runbooks/: data-incident.md
git/: gitconfig
lib/: common.sh
nvim/: init.lua
nvim/lua/plugins/: colorscheme.lua  editor.lua  lsp.lua
shell/: aliases.sh  rc.sh
starship/: starship.toml
team/: README.md  TEMPLATE-promotion-tracker.yml  TEMPLATE-roster.yml  roster.yml
team/engagements/: TEMPLATE.yml
team/one-on-ones/: TEMPLATE.md
team/personal/: TEMPLATE-first-90-days.md  first-90-days.md
team/weekly-status/: TEMPLATE.md
tests/: run-tests.sh
tmux/: tmux.conf
vscode/: extensions.txt  keybindings.json  settings.json
wezterm/: wezterm.lua
